# makey-cli

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  codecov.yml  justfile  pyproject.toml  setup.py
.github/workflows/: docs-publish.yml  python-publish.yml  python-test.yml
docs/: README.md  _404.md  _coverpage.md  _homepage.md  _sidebar.md  changelog.md  index.html  install.md  issues.md  styles.css  usage.md
makey/: __init__.py  makey.py
makeycli/: __init__.py  makey.py
src/makey/: __init__.py  makey.py
tests/: test_makey.py
